# resource-tracker-rs

./: 404.html  Benchmarks.html  Cargo.toml  Changelog.md  Dependencies.html  Design.html  Introduction.html  Open-source-resource-monitoring-landscape.html  README.md  Rationale.html  References.html  Rust-crate-level-landscape.html  Similar-functionality-tools.html  Specification.html  Usage.html  arm-box-setup.md  justfile  print.html  searcher-c2a407aa.js  searchindex-c01db0e6.js  stress.r  toc-a617d0e0.js  toc.html
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  release.yml
cargo/doc/: crates.js  help.html  settings.html  src-files.js
cargo/doc/resource_tracker/: all.html  fn.handle_sigterm.html  fn.main.html  fn.shutdown.html  index.html  sidebar-items.js  static.SIGTERM_RECEIVED.html
cargo/doc/resource_tracker/collector/: index.html  sidebar-items.js
cargo/doc/resource_tracker/config/: constant.DEFAULT_CONFIG_FILE.html  constant.DEFAULT_INTERVAL_SECS.html  enum.OutputFormat.html  index.html  sidebar-items.js  struct.Cli.html  struct.Config.html  struct.JobMetadata.html  struct.TomlConfig.html  struct.TomlJob.html  struct.TomlTracker.html
cargo/doc/resource_tracker/metrics/: index.html  sidebar-items.js  struct.Sample.html
cargo/doc/resource_tracker/output/: index.html  sidebar-items.js
cargo/doc/resource_tracker/sentinel/: constant.API_TIMEOUT_SECS.html  constant.DEFAULT_API_BASE.html  index.html  sidebar-items.js  struct.SentinelClient.html
cargo/doc/search.index/: 000adf2f33d1.js  00e9993f8dfb.js  0276f08993f8.js  040611685786.js  08240915794c.js  09eb4ab9469e.js  14304ad7bf91.js  206ad6276696.js  2409981f0428.js  274f2dfb8dc7.js  29319cc36289.js  2932cede8a87.js  2b7f3994eabe.js  2c09fa3aea55.js  2d6f685efae7.js  2e340461ddc2.js  2ee9bbe3fa3d.js  3337b69f395c.js  334aef9f6b61.js  334d1d0c4a2b.js  38c0853c65c0.js  3c5b61df6338.js  3f1a47db7d8f.js  4f46928bccf8.js  524313aff76f.js  52e9474dec0c.js  552804d7c7d2.js  5584a0118037.js  5739f51a1a2c.js  58d3842dff7a.js  622b101b45da.js  6685c9f7da85.js  69b8ea3bbca9.js  6a828deb6fa8.js  6c2e23435b99.js  6d7524fddec6.js  6eb4a9e5aa0c.js  70559072196c.js  7571cf79d871.js  7631c003ae4b.js  (+6 more)
cargo/doc/search.index/crateNames/: d3def755d0dd.js
cargo/doc/search.index/desc/: 68cdefe7278c.js
cargo/doc/search.index/entry/: 9cb789bd68fa.js
examples/: repro_cpu_cutime_spike.rs  repro_memory_rss_vs_used.rs
https:/: sparecores.com
https:/github.com/SpareCores/: resource-tracker
resource-tracker-rs-book/: book.toml  justfile
resource-tracker-rs-book/src/: Benchmarks.md  Dependencies.md  Design.md  Introduction.md  Open-source-resource-monitoring-landscape.md  Rationale.md  References.md  Rust-crate-level-landscape.md  SUMMARY.md  Similar-functionality-tools.md  Specification.md  Usage.md
resource-tracker-rs-book/theme/: custom.css
src/: config.rs  main.rs  thread_util.rs
src/collector/: cpu.rs  disk.rs  gpu.rs  host.rs  memory.rs  mod.rs  network.rs
src/collector/clouds/: alicloud.rs  aws.rs  azure.rs  gcp.rs  hetzner.rs  mod.rs  ovh.rs  upcloud.rs  vultr.rs
src/metrics/: cpu.rs  disk.rs  disk_mount.rs  disk_type.rs  gpu.rs  host.rs  memory.rs  mod.rs  network.rs
src/output/: csv.rs
src/sentinel/: mod.rs  run.rs  s3.rs  upload.rs
tests/: compare.rs  smoke.rs
(+187 files in other folders)
