[package]
name = "resource-tracker-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
# NVIDIA GPU monitoring via NVML — loaded at runtime with libloading.
# No build-time system dependencies (no protoc, no libdrm-dev).
# Gracefully returns an empty Vec on hosts without an NVIDIA GPU/driver.
nvml-wrapper = "0.12"


# CLI argument parsing — stripped to essentials
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }

# Linux /proc resource tracking
procfs = { version = "0.18", features = ["serde"] }

# Lightweight sync HTTP for API calls + S3 PUT (no tokio)
ureq = { version = "3", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TOML config file support
toml = { version = "1.0", default-features = false, features = ["parse", "serde"] }

# For manual AWS Sig V4 (S3 PUT without heavy SDK)
hmac = "0.13.0-rc.6"
sha2 = "0.10.0"
hex = "0.4"

# statvfs for filesystem space (no additional binary size — pure FFI bindings)
libc = "0.2"
libamdgpu_top = { version = "0.11.2", default-features = false, features = ["libdrm_dynamic_loading"] }

[profile.release]
opt-level = "z"      # optimize for size
lto = true           # link-time optimization
codegen-units = 1    # better dead-code elimination
strip = true         # strip symbols
panic = "abort"      # smaller panic handler


